feat: Added messaging queue between graound station and the core system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.jwt.refresh.key=1fKewjGbwbA0XgH7dQrRkRQz5WLLgtZUz+q0cCrDl9QcCVy3OZdJWefyE
 
 spring.jwt.access.expiration=60
 spring.jwt.refresh.expiration=600
+
+# RabbitMQ configs
+spring.rabbitmq.uri=amqp://guest:guest@localhost:5672/plans_core
+
+messaging.queue.station=station-record-queue
+messaging.queue.station.problem=station-record-problem-queue
+
+messaging.consumer.max-size=1
+messaging.consumer.auto-start=true
+messaging.consumer.initial-size=1
